Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75386

QComboBox Selected Entry Color is incorrect on macOS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.4.0 Beta1
    • 5.12.2, 5.12
    • GUI: Look'n'Feel
    • None
    • macOS
    • 306f44a176 (qt/qtbase/dev) 306f44a176 (qt/tqtc-qtbase/dev)

      The accent color for entries for a QComboBox is much lighter than the native accent color on macOS. This does not affect a QComboBox that is set to editable.

      The issue is similar to https://bugreports.qt.io/browse/QTBUG-28443 and the screenshot reflects the bug with the discrepancy in color.

      If needed, I can upload a test file. As a reference, note that Qt Creator (built with 5.12) reflects this issue with QComboBox.

      The fix is probably similar to https://bugreports.qt.io/browse/QTBUG-70676 or the use of controlAccentColor, which available in macOS Mojave. It looks like QComboBox is using the user's highlight color instead of the user's accent color.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tpochep Timur Pocheptsov
            chargeflux Chargeflux Chargeflux
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes